--- a/templates/default/pgpool.conf.erb
+++ b/templates/default/pgpool.conf.erb
@@ -289,7 +289,7 @@ master_slave_sub_mode = 'stream'
 
 # - Streaming -
 
-sr_check_period = <%= node["postgres"]["pgpool2"]["sr_check_period"] || '0' >
+sr_check_period = <%= node["postgres"]["pgpool2"]["sr_check_period"] || '0' %>
                                    # Streaming replication check period
                                    # Disabled (0) by default
 sr_check_user = '<%= node["postgres"]["replication"]["user"] %>'
@@ -299,7 +299,7 @@ sr_check_user = '<%= node["postgres"]["replication"]["user"] %>'
                                    # sr_check_period = 0
 sr_check_password = '<%= node["postgres"]["replication"]["password"] %>'
                                    # Password for streaming replication check user
-delay_threshold = <%= node["postgres"]["pgpool2"]["delay_threshold"] || '0' >
+delay_threshold = <%= node["postgres"]["pgpool2"]["delay_threshold"] || '0' %>
                                    # Threshold before not dispatching query to standby node
                                    # Unit is in bytes
                                    # Disabled (0) by default
@@ -383,7 +383,7 @@ failover_command = '/usr/sbin/pgpool_failover %d %h %p %D %m %H %M %P'
                                    #   %M = old master node id
                                    #   %P = old primary node id
                                    #   %% = '%' character
-failback_command = ''
+failback_command = '/usr/sbin/pgpool_failback %d %h %p %D %m %H %M %P'
                                    # Executes this command at failback.
                                    # Special values:
                                    #   %d = node id
