--- a/templates/default/pgpool_failback.erb
+++ b/templates/default/pgpool_failback.erb
@@ -30,7 +30,7 @@ log()
 echo $(date +"%D %T") $2 >> $1
 }
 
-if [ $failed_node_id = $old_primary_node_id ]; then  # I was the master and I failed, but now I'm back
+if [ $failed_node_id = $old_master_id ]; then  # I was the master and I failed, but now I'm back
   $LOGGER "Executing $BASENAME as user $ID"
   $LOGGER "Triggering failback on remote PostgreSQL server with hostname $failed_host_name"
   /usr/sbin/pcp_detach_node 10 localhost 9898 postgres <%= node["postgres"]["pgpool2"]["users"]["postgres"] %> $failed_node_id
