--- a/templates/default/pgpool_failover.erb
+++ b/templates/default/pgpool_failover.erb
@@ -30,7 +30,7 @@ log()
 echo $(date +"%D %T") $2 >> $1
 }
 
-if [ $failed_node_id = $old_primary_node_id ]; then  # master failed
+if [ $failed_node_id = $old_master_id ]; then  # master failed
   $LOGGER "Executing $BASENAME as user $ID"
   $LOGGER "Triggering failover on remote PostgreSQL server with hostname $new_master_host_name"
   $SSH -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $new_master_host_name $trigger_cmd
