--- a/templates/default/pgpool_failover.erb
+++ b/templates/default/pgpool_failover.erb
@@ -18,15 +18,6 @@ new_master_host_name=$6
 old_master_id=$7
 old_primary_node_id=$8
 
-echo "failed_node_id=$1"
-echo "failed_host_name=$2"
-echo "failed_port=$3"
-echo "failed_db_cluster=$4"
-echo "new_master_id=$5"
-echo "new_master_host_name=$6"
-echo "old_master_id=$7"
-echo "old_primary_node_id=$8"
-
 SSH=/usr/bin/ssh
 LOGGER="log /var/log/postgresql/pgpool_failover.log"
 trigger_cmd="touch /tmp/pg_failover_trigger"
@@ -39,7 +30,16 @@ log()
 echo $(date +"%D %T") $2 >> $1
 }
 
-if [ $failed_node_id = $old_master_id ]; then  # master failed
+$LOGGER "failed_node_id=$1"
+$LOGGER "failed_host_name=$2"
+$LOGGER "failed_port=$3"
+$LOGGER "failed_db_cluster=$4"
+$LOGGER "new_master_id=$5"
+$LOGGER "new_master_host_name=$6"
+$LOGGER "old_master_id=$7"
+$LOGGER "old_primary_node_id=$8"
+
+if [ $failed_node_id = $old_primary_node_id ]; then  # master failed
   $LOGGER "Executing $BASENAME as user $ID"
   $LOGGER "Triggering failover on remote PostgreSQL server with hostname $new_master_host_name"
   $SSH -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $new_master_host_name $trigger_cmd
